--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -50,7 +50,7 @@
                                                 <td>{{prod.sub_cat}} </td>
                                                 <td>{{prod.title}}</td>
                                                 <td>
-                                                    <img [src]="prod.imagevalue" alt="prod.productimg" /></td>
+                                                    <img [src]="prod.image" alt="prod.image" /></td>
                                                 <td>{{prod.created_on | date: 'dd/MM/yyyy'}}</td>
                                                 <td>
                                                     <!-- <a routerLink="/addprducts" class="btn btn-outline-primary" (click)="editProd(prod.title,prod.category_id,prod.main_cat,prod.id,prod.sub_cat,prod.category2_id)">Edit</a> -->
