--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -28,7 +28,7 @@
 
         <li class="nav-item" [ngClass]="{'active':pageNav==='subcategorie' || pageNav==='addsubcategorie'}">
             <a class="nav-link" routerLink="/subcategory">
-                <i class=" icon-layers menu-icon"></i>
+                <i class="fa fa-caret-square-o-right" aria-hidden="true"></i>
                 <span class="menu-title">Sub Categories </span>
             </a>
         </li>
@@ -40,17 +40,10 @@
         </li> -->
         <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
             <a class="nav-link" routerLink="/prducts">
-                <i class=" icon-layers menu-icon"></i>
+                <i class="fa fa-product-hunt" aria-hidden="true"></i>
                 <span class="menu-title">Products </span>
             </a>
         </li>
-        <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='imageupload'}">
-            <a class="nav-link" routerLink="/imageUpload">
-                <i class=" icon-layers menu-icon"></i>
-                <span class="menu-title">Upload image</span>
-            </a>
-        </li> -->
-
         <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
             <a class="nav-link" routerLink="/users">
                 <i class="icon-people menu-icon"></i>
