--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -56,3 +56,9 @@ strong{
     /* color:red; */
     cursor: pointer;
 }
+.form-inline{
+    margin-top: 30px;
+}
+.form-inline .form-control{
+    margin-right: 20px;  
+}
