--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -32,12 +32,12 @@
                 <span class="menu-title">Sub Categories </span>
             </a>
         </li>
-        <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
+        <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
             <a class="nav-link" routerLink="/vendors">
                 <i class="icon-people menu-icon"></i>
                 <span class="menu-title">Vendors List </span>
             </a>
-        </li> -->
+        </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
             <a class="nav-link" routerLink="/prducts">
                 <i class="fa fa-product-hunt" aria-hidden="true"></i>
