--- a/src/app/components/delivery/add.delivery.html
+++ b/src/app/components/delivery/add.delivery.html
@@ -17,28 +17,28 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title text-center">Add Vendor </h4>
-                                <a routerLink="/vendors" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
+                                <h4 class="card-title text-center">Add Delivery Boy</h4>
+                                <a routerLink="/delivery" id="show" class="btn  btn-maron" style="float: right;    margin-top: -45px;">Back</a>
                                 <form class="cmxform" id="signupForm" method="get" action="#">
                                     <fieldset>
                                         <div class="form-group">
-                                            <label for="firstname">Contact Name</label>
+                                            <label for="firstname">Name</label>
                                             <input id="category" class="form-control" name="category" type="text" [(ngModel)]="contact" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="firstname">Business Name</label>
-                                            <input id="category" class="form-control" name="business" type="text" [(ngModel)]="business" />
+                                            <label for="firstname">Emai</label>
+                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="email" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="firstname">Emai</label>
-                                            <input id="category" class="form-control" name="email" type="text" [(ngModel)]="email" />
+                                            <label for="firstname">Password</label>
+                                            <input type="password" id="category" class="form-control" name="category" type="text" [(ngModel)]="password" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Phone</label>
-                                            <input id="category" class="form-control" name="phone" type="text" [(ngModel)]="phone" />
+                                            <input id="category" class="form-control" name="category" type="text" [(ngModel)]="phone" />
                                         </div>
                                         <div class="form-group">
-                                            <label for="exampleInputEmail1">Logo</label>
+                                            <label for="exampleInputEmail1">Id Proof</label>
                                             <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
                                             <div *ngIf="image">
                                                 <h4>Image:</h4>
@@ -46,8 +46,8 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <button type="submit" class="btn btn-primary vendor-button" (click)="updateVendorbyId()">
-                                            update Vendor
+                                        <button type="submit" class="btn btn-primary vendor-button" (click)="addVendor()">
+                                            Add
                                         </button>
                                     </fieldset>
                                 </form>
