--- a/src/app/components/delivery/delivery.component.html
+++ b/src/app/components/delivery/delivery.component.html
@@ -16,9 +16,9 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- <a href="" id="show" class="btn  btn-maron" style="float: right">Export To Excel</a> -->
-                        <!-- <a routerLink="/addvendors" id="show" class="btn  btn-maron" style="float: right">Add Vendor</a> -->
+                        <a routerLink="/addDelivery" id="show" class="btn  btn-maron" style="float: right">Add Delivery Boy</a>
                         <h4 class="card-title">
-                            vendors </h4>
+                            Delivery guys </h4>
                         <br/>
                         <div class="row">
                             <div class="col-12">
@@ -27,10 +27,10 @@
                                         <thead class="thead-dark">
                                             <tr>
                                                 <th>S.no</th>
-                                                <th>Contact Name </th>
-                                                <th>Business Name</th>
-                                                <th>Email </th>
-                                                <th>Phone </th>
+                                                <th>Name</th>
+                                                <th>Email</th>
+                                                <!-- <th>Password</th> -->
+                                                <th>Phone</th>
                                                 <th>Logo</th>
                                                 <th>Action</th>
                                             </tr>
@@ -38,15 +38,15 @@
                                         <tbody>
                                             <tr class="todo-list" *ngFor="let vendorDetails of vendors;let i = index">
                                                 <td>{{i+1}}</td>
-                                                <td>{{vendorDetails.first_name}}</td>
+                                                <td>{{vendorDetails.contact_name}}</td>
                                                 <td>{{vendorDetails.business_name}}</td>
                                                 <td>{{vendorDetails.email}}</td>
                                                 <td>{{vendorDetails.phone}}</td>
                                                 <td>
                                                     <img src="assets/images/samples/1.jpg"> </td>
                                                 <td>
-                                                    <a routerLink="/addvendors" class="btn btn-outline-primary" (click)="editVendor(vendorDetails.u_id)">Edit</a>
-                                                    <a class="btn btn-outline-primary vendor-delete" (click)="deleteVendor(vendorDetails.u_id)">Delete</a>
+                                                    <a routerLink="/addvendors" class="btn btn-outline-primary">Edit</a>
+                                                    <a (click)="delete()" class="btn btn-outline-primary vendor-delete">Delete</a>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -56,6 +56,9 @@
                         </div>
                     </div>
                 </div>
+
+
+
             </div>
             <!-- content-wrapper ends -->
             <!-- partial:partials/_footer.html -->
