--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -35,7 +35,7 @@
         <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
             <a class="nav-link" routerLink="/vendors">
                 <i class="icon-people menu-icon"></i>
-                <span class="menu-title">Vendors List </span>
+                <span class="menu-title">Admin List</span>
             </a>
         </li>
         <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
@@ -44,12 +44,24 @@
                 <span class="menu-title">Products </span>
             </a>
         </li>
-        <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
+        <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
+            <a class="nav-link" routerLink="/offers">
+                <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+                <span class="menu-title">Coupon Management</span>
+            </a>
+        </li>
+        <li class="nav-item" [ngClass]="{'active':pageNav==='delivery' || pageNav==='addDelivery'}">
+            <a class="nav-link" routerLink="/delivery">
+                <i class="fa fa-truck" aria-hidden="true"></i>
+                <span class="menu-title">Delivery Handling</span>
+            </a>
+        </li>
+        <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
             <a class="nav-link" routerLink="/users">
                 <i class="icon-people menu-icon"></i>
                 <span class="menu-title">Loyalty Management</span>
             </a>
-        </li>
+        </li> -->
 
         <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
             <a class="nav-link" routerLink="/wholesellers">
