--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -50,7 +50,7 @@
                                                 <td>{{coupons.minimum_value}}</td>
 
                                                 <td>
-                                                    <a routerLink="/addvendors" class="btn btn-outline-primary" (click)="editVendor(vendorDetails.u_id)">Edit</a>
+                                                    <a routerLink="/addvendors" class="btn btn-outline-primary coupon-margin" (click)="editVendor(vendorDetails.u_id)">Edit</a>
                                                     <a class="btn btn-outline-primary vendor-delete" (click)="deleteVendor(vendorDetails.u_id)">Delete</a>
                                                 </td>
                                             </tr>
